# vigilia-cli-rs

./: .openapi-generator-ignore  Cargo.toml  README.md  generate.sh
src/: config.rs  index.rs  main.rs  query.rs  ui.rs  vig_command.rs
src/apis/: configuration.rs  default_api.rs
src/models/: core_version.rs  mod.rs  search_result.rs  supported_media_types.rs
