[package]
name = "vigilia-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }#
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
